--- a/pcap_reader/requirements.txt
+++ b/pcap_reader/requirements.txt
@@ -1,1 +1,9 @@
-dpkt==1.9.5
+cycler==0.10.0
+kiwisolver==1.3.1
+matplotlib==3.4.2
+numpy==1.20.3
+Pillow==8.2.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+scapy==2.4.5
+six==1.16.0
